# chroma-mcp

./: pyproject.toml
.github/workflows/: ruff_check.yml
src/chroma_mcp/: __init__.py  server.py
tests/: test_server.py
